Fix home page counter overflow, fixes #319
Adds breakpoints at tab-land and tab-port in respond-down conf

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -158,7 +158,9 @@ $home-section-inner-padding: $baseline * 2
     padding-left: 5px
 
 .home-shows-counter
-  $char-width: 44px
+  $char-width: 43px
+  $char-tab-land: 38px
+  $char-tab-port: 31px
 
   position: relative
   overflow: hidden
@@ -181,6 +183,14 @@ $home-section-inner-padding: $baseline * 2
     border-radius: 6px
 
     margin-left: 2px
+
+  @include respond-down(tab-land)
+    .char1, .char2, .char3, .char4
+      width: $char-tab-land
+  @include respond-down(tab-port)
+    font-size: $base-font-size * 2.5
+    .char1, .char2, .char3, .char4
+      width: $char-tab-port
 
 .home .content
   overflow: hidden
